tests/error/enum_errors/enum_non_guppy_method.py
from guppylang.decorator import guppy


@guppy.enum
class MyEnum:
    var1 = {"x": int}

    def nonguppy_method(self) -> None:
        pass


MyEnum.compile()
